@@ -168,7 +168,8 @@ class PDBQTReader(base.SingleFrameReader):
                     atoms.append(
                         (serial, name, resName, chainID, resSeq, occupancy, tempFactor, partialCharge, atomtype))
         self.numatoms = len(coords)
-        self.ts = self._Timestep.from_coordinates(np.array(coords, dtype=np.float32))
+        self.ts = self._Timestep.from_coordinates(np.array(coords, dtype=np.float32),
+                                                  **self._ts_kwargs)
         self.ts._unitcell[:] = unitcell
         self.ts.frame = 0  # 0-based frame number
         if self.convert_units:
